--- a/fintech/package.json
+++ b/fintech/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "qrcode.react": "^3.1.0",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -39,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy" : "https://testapi.openbanking.or.kr"
+  "proxy": "https://testapi.openbanking.or.kr"
 }
